--- a/data/0900DawlatshahSamarqandi/0900DawlatshahSamarqandi.TadhkiratShucara/0900DawlatshahSamarqandi.TadhkiratShucara.AOCP20250214656Vols-per1.yml
+++ b/data/0900DawlatshahSamarqandi/0900DawlatshahSamarqandi.TadhkiratShucara/0900DawlatshahSamarqandi.TadhkiratShucara.AOCP20250214656Vols-per1.yml
@@ -1,5 +1,5 @@
-00#VERS#CLENGTH##: 994793
-00#VERS#LENGTH###: 273724
+00#VERS#CLENGTH##: 1067924
+00#VERS#LENGTH###: 277762
 00#VERS#URI######: 0900DawlatshahSamarqandi.TadhkiratShucara.AOCP20250214656Vols-per1
 80#VERS#BASED####: https://search.worldcat.org/title/234682421
 80#VERS#COLLATED#: permalink, permalink, permalink
