--- a/data/0900Anonymous/0900Anonymous.QandiyyaSamarqand/0900Anonymous.QandiyyaSamarqand.AOCP20250214653-per1.yml
+++ b/data/0900Anonymous/0900Anonymous.QandiyyaSamarqand/0900Anonymous.QandiyyaSamarqand.AOCP20250214653-per1.yml
@@ -5,12 +5,12 @@
 80#VERS#COLLATED#: permalink, permalink, permalink
 80#VERS#LINKS####:
     https://dn790009.ca.archive.org/0/items/0001_20200411/قنديه0001.pdf
-90#VERS#ANNOTATOR: the name of the annotator (latin characters; please
-    use consistently)
+90#VERS#ANNOTATOR: the name of the annotator (latin characters; please use
+    consistently)
 90#VERS#COMMENT##: This text was OCR'ed as part of the second phase of the
     OpenITI AOCP project, generously funded by the Andrew W. Mellon Foundation.
-    This file was created on 2025-02-14 14:57:36 UTC by eScriptorium version 0.13.8
-    Transcription model used: all_arabic_scripts
-    Average transcription confidence: 0.9635538036900029
+    This file was created on 2025-02-14 14:57:36 UTC by eScriptorium version
+    0.13.8 Transcription model used: all_arabic_scripts Average transcription
+    confidence: 0.9635538036900029
 90#VERS#DATE#####: YYYY-MM-DD
-90#VERS#ISSUES###: UNCORRECTED_OCR
+90#VERS#ISSUES###: UNCORRECTED_OCR, PRIMARY_VERSION
